--- a/aboutstyle/style.css
+++ b/aboutstyle/style.css
@@ -7,8 +7,9 @@ body {
   width: 80%;
   margin: auto;
   background-image: url(../IMAGES/background2.jpg);
-  background-position: cover;
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 /*navigation bar*/
@@ -133,3 +134,6 @@ h1,p{
   cursor: pointer;
   padding: 0px 40px;
 }
+
+/*contactus*/
+
