--- a/contactusstyle/style.css
+++ b/contactusstyle/style.css
@@ -7,8 +7,10 @@ body {
   width: 80%;
   margin: auto;
   background-image: url(../IMAGES/background2.jpg);
-  background-position: cover;
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  font-family: "Poppins", sans-serif;
 }
 
 /*navigation bar*/
@@ -79,7 +81,6 @@ a.signin {
   display: flex;
   justify-content: center;
   margin-top: 110px;
-
 }
 
 img {
@@ -98,7 +99,7 @@ img {
 }
 
 h1 {
-  font-size: 65px;
+  font-size: 50px;
   font-family: "Poppins", sans-serif;
 }
 
@@ -107,7 +108,8 @@ p {
   font-family: "Poppins", sans-serif;
 }
 
-h1,p{
+h1,
+p {
   color: white;
 }
 /*second-button*/
@@ -132,4 +134,63 @@ h1,p{
   color: rgb(0, 0, 0);
   cursor: pointer;
   padding: 0px 40px;
+}
+
+/*contactbox*/
+
+h1.contactus {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.contactcontainer {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  height: 500px;
+}
+
+.infobox {
+  flex-direction: column;
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+textarea,
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 3px solid white;
+  background: transparent;
+}
+
+label {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  display: flex;
+}
+
+.input-group {
+  width: 30em;
+}
+
+/*submit-button*/
+
+.bsubmit {
+  display: flex;
+  justify-content: center;
+}
+
+.submit-button{
+  background-color: white;
+  cursor: pointer;
+  border: none;
+  padding: 17px 40px;
 }
