--- a/indexstyle/style.css
+++ b/indexstyle/style.css
@@ -7,8 +7,8 @@ body {
   width: 80%;
   margin: auto;
   background-image: url(../IMAGES/background2.jpg);
-  background-position: cover;
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
@@ -80,7 +80,6 @@ a.signin {
   display: flex;
   justify-content: center;
   margin-top: 110px;
-
 }
 
 img {
@@ -108,7 +107,8 @@ p {
   font-family: "Poppins", sans-serif;
 }
 
-h1,p{
+h1,
+p {
   color: white;
 }
 /*second-button*/
