--- a/thankyoustyle/style.css
+++ b/thankyoustyle/style.css
@@ -10,6 +10,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  font-family: "Poppins", sans-serif;
 }
 
 /*navigation bar*/
@@ -74,89 +75,28 @@ a.signin {
   cursor: pointer;
 }
 
-/*website image*/
-
-.second-container {
+/*thank you*/
+.thankbox {
   display: flex;
-  justify-content: center;
-  margin-top: 110px;
-}
-
-img {
-  width: 400px;
-  height: 500px;
-  margin-top: 43.33px;
-  display: none;
-}
-
-/*para-text*/
-
-.title1 {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+  margin-top: 100px;
 }
 
 h1 {
-  font-size: 65px;
-  font-family: "Poppins", sans-serif;
+  font-size: 60px;
+  color: white;
+  text-align: center;
+  margin-top: 150px;
 }
 
-p {
-  font-size: 30px;
-  font-family: "Poppins", sans-serif;
-}
-
-h1,
 p {
   color: white;
-}
-/*second-button*/
-
-.button-container {
-  display: flex;
-  gap: 30px;
-  justify-content: center;
-  padding: 100px 0px;
-}
-
-.started,
-.free {
-  font-family: "Poppins", sans-serif;
-  font-size: 15.5px;
-  color: rgb(255, 255, 255);
-}
-
-.started {
-  border: none;
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-  padding: 0px 40px;
-}
-
-/*aboutus-text*/
-
-.about-container{
-  display: flex;
-  flex-direction: column;
+  font-size: 40px;
   text-align: center;
-  gap: 30px;
 }
 
-.contactus-button{
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-}
-
-a.contactus{
-  border: none;
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  cursor: pointer;
-  padding: 17px 40px;
-  text-decoration: none;
-   font-family: "Poppins", sans-serif;
-   color: black;
+p.backbutton,
+a.backbutton {
+  color: white;
+  font-size: 20px;
+  padding-top: 42px;
 }
